--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@coreui/react-chartjs": "^2.1.0",
     "@coreui/utils": "^1.3.1",
     "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
