--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
@@ -15,11 +15,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "." ,
     "paths": {
-      "@/*": ["./*"],
-    }    
+      "@": ["src"],
+      "@/*": ["src/*"],
+      "@components":["src/components"],
+      "@components/*":["src/components/*"],
+      "@assets":["src/assets"],
+      "@assets/*":["src/assets/*"],
+    }
   },
-  "include": ["src"],
+  "include": ["next-env.d.ts", "twin.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+  "exclude": ["node_modules"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
