--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
-    "simplebar-react": "^3.2.1"
+    "simplebar-react": "^3.2.1",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
