--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
     "simplebar-react": "^3.2.1",
+    "tailwindcss": "^3.2.7",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.2",
+    "tailwind-scrollbar": "^2.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
