--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "history": "^5.3.0",
     "prop-types": "^15.8.1",
+    "ra-data-json-server": "^4.8.0",
+    "ra-data-simple-rest": "^4.8.0",
     "react": "^18.2.0",
+    "react-admin": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
